@@ -5,6 +5,7 @@ MineSharp 0.1.4:
  - Parse chat message type from registry
  - added WaitForTick() method to physics plugin
  - added AutoRespawn Plugin (not enabled by default)
+ - added BotBuilder to create bots
 
 MineSharp 0.1.3:
  - handle SpawnLivingEntity packet
